--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -12,13 +12,6 @@
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
 }
 
-@media only screen and (max-width: 374px) {
-  #profile {
-    margin-top: 3em;
-  }
-}
-
-
 /* Summary */
 
 #summary {
@@ -146,10 +139,4 @@
   .project-image-container {
     height: 10em;
   }
-}
-
-/* thank-you */
-
-#thank-you {
-  margin-bottom: 2.5em;
 }
